--- a/styles/global.css
+++ b/styles/global.css
@@ -1,6 +1,5 @@
 html,
 /* GENERAL */
-
 :root {
   --bg-color-light: #f8eded;
   --bg-color-dark: ;
@@ -21,13 +20,9 @@ body {
   padding: 0;
   margin: 0;
   line-height: 1.6;
-  font-family: var(--font-text);
+  /* font-family: var(--font-text); */
   font-size: 18px;
   color: var(--font-color-dark);
-}
-
-.bg-main {
-  color: var(--bg-color-light);
 }
 
 * {
@@ -35,11 +30,13 @@ body {
 }
 
 a {
-  color: #0070f3;
+  color: var(--font-color-dark);
   text-decoration: none;
 }
 
 a:hover {
+  color: var(--font-color-light);
+  border-color: var(--font-color-dark);
   text-decoration: underline;
 }
 
