--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,63 +1,88 @@
 
+/* RELATED TO h1 */
 .heading3Xl {
-    font-family: 'Italiana', sans-serif;
-    font-size: 10rem;
-    line-height: 10rem;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
-  }
+  font-family: 'Italiana', sans-serif;
+  font-size: 10rem;
+  line-height: 10rem;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
 
+/* RELATED TO h2 */
 .heading2Xl {
-    font-family: 'Italiana', sans-serif;
-    font-size: 5rem;
-    line-height: 10rem;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
-  }
-  
-  .headingXl {
-    font-size: 2rem;
-    line-height: 1.3;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
-  }
-  
-  .headingLg {
-    font-size: 1.5rem;
-    line-height: 1.4;
-    margin: 1rem 0;
-  }
-  
-  .headingMd {
-    font-size: 1.2rem;
-    line-height: 1.5;
-  }
-  
-  .borderCircle {
-    border-radius: 9999px;
-  }
-  
-  .colorInherit {
-    color: inherit;
-  }
-  
-  .padding1px {
-    padding-top: 1px;
-  }
-  
-  .list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .listItem {
-    margin: 0 0 1.25rem;
-  }
-  
-  .text-description {
-    color: var(-dark);
-  }
+  font-family: 'Italiana', sans-serif;
+  font-size: 5rem;
+  line-height: 10rem;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
+
+/* RELATED TO h3 */
+.headingXl {
+  font-size: 2rem;
+  line-height: 1.3;
+  font-weight: 800;
+  letter-spacing: -0.05rem;
+  margin: 1rem 0;
+}
+
+/* RELATED TO h4 */
+.headingLg {
+  font-size: 1.5rem;
+  line-height: 1.4;
+  margin: 1rem 0;
+}
+
+/* RELATED TO h5 */
+.headingMd {
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+.borderCircle {
+  border-radius: 9999px;
+}
+
+.colorInherit {
+  color: inherit;
+}
+
+.padding1px {
+  padding-top: 1px;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.listItem {
+  margin: 0 0 1.25rem;
+}
+
+.text-description {
+  color: var(--font-color-dark);
+}
+
+/* __________ */
+
+/* DESIGN */
+
+.bg .bg-design {
+  display: grid;
+}
+
+/* ABOUT */
+
+.bg .bg-about {
+  display: grid;
+}
+
+/* FIND ME */
+
+.bg .bg-contact {
+  display: grid;
+}
