--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -4,9 +4,9 @@
 }
   
 .container {
-    max-width: 36rem;
+    max-width: 100vw;
     padding: 0 1rem;
-    margin: 3rem auto 6rem;
+    margin: 0 auto 0;
   }
   
   .header {
