--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,19 +1,23 @@
+.page{
+  height: 100vh;
+}
 
 /* RELATED TO h1 */
 .heading3Xl {
   font-family: 'Italiana', sans-serif;
   font-size: 10rem;
-  line-height: 10rem;
+  line-height: 5rem;
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
+  padding-bottom: 10rem;
 }
 
 /* RELATED TO h2 */
 .heading2Xl {
   font-family: 'Italiana', sans-serif;
   font-size: 5rem;
-  line-height: 10rem;
+  line-height: 5rem;
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
@@ -21,8 +25,9 @@
 
 /* RELATED TO h3 */
 .headingXl {
+  font-family: 'Italiana', sans-serif;
   font-size: 2rem;
-  line-height: 1.3;
+  line-height: 1.5;
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
@@ -30,6 +35,7 @@
 
 /* RELATED TO h4 */
 .headingLg {
+  font-family: 'Italiana', sans-serif;
   font-size: 1.5rem;
   line-height: 1.4;
   margin: 1rem 0;
@@ -37,6 +43,13 @@
 
 /* RELATED TO h5 */
 .headingMd {
+  font-family: 'Italiana', sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.5;
+}
+
+.textDescriptions{
+  font-family: 'Forum', serif;
   font-size: 1.2rem;
   line-height: 1.5;
 }
@@ -63,26 +76,15 @@
   margin: 0 0 1.25rem;
 }
 
-.text-description {
-  color: var(--font-color-dark);
-}
+.verticalText {
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
+  }
 
-/* __________ */
+  /* HOME PAGE */
+  .bigMoon {
+    height: 100%;
+    display: block;
+  }
 
-/* DESIGN */
 
-.bg .bg-design {
-  display: grid;
-}
-
-/* ABOUT */
-
-.bg .bg-about {
-  display: grid;
-}
-
-/* FIND ME */
-
-.bg .bg-contact {
-  display: grid;
-}
