--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -46,8 +46,13 @@
   font-size: 1.5rem;
   line-height: 1.4;
   margin: 1rem 0;
+  // color: var(--font-color-dark);
+}
+
+.headingLg a {
   color: var(--font-color-dark);
 }
+
 .headingLg a:hover {
   color: var(--font-color-dark);
   -webkit-text-stroke: 1.5px var(--font-color-dark);
@@ -107,7 +112,7 @@
   justify-content: flex-end;
   transform: scale(0.6);
   margin: -1rem;
-
+  padding-bottom: 0.25em;
 }
 
 .icon:nth-child(2) {
@@ -128,6 +133,7 @@
   position: relative;
   left: 8rem;
   width: 120%;
+  opacity: 100%;
 }
 
 .arrowDown {
@@ -150,16 +156,57 @@
 
 /* Redo with media queries */
 
-
 /* GO BACK */
-a.backChevron{
+a.backChevron {
   text-decoration: none;
   color: var(--font-color-dark);
 }
 
-a.backChevron:hover + .goBackText{
+a.backChevron:hover + .goBackText {
   text-decoration: dashed;
   color: var(--font-color-light);
 }
 
 // No va
+
+/*Blobs*/
+.wrapper{
+  z-index: 99;
+  perspective-origin: 50% 50%;
+}
+
+.blob {
+  translate: 100px;
+  width: inherit;
+  height: auto;
+  background-position: 20px;
+  transform-style: preserve-3d;
+
+  .wrapper:hover & {
+    scale: 2;
+    translate: 100px 50px;
+  }
+
+  @supports not (scale: 1) {
+    .wrapper:hover & {
+      transform: scale(2);
+      transform: translate(0, 50px);
+    }
+  }
+}
+
+.blob1 {
+  transition: all 300ms;
+}
+
+.blob2 {
+  transition: all 1s;
+}
+
+.blob3 {
+  transition: all 3s;
+}
+
+.blob4 {
+  transition: all 1.5s;
+}
