--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,8 +1,8 @@
 /* COMPONENT-LEVEL STYLES */
 .container {
     max-width: 100vw;
-    padding: 0 1rem;
-    margin: 0 auto 0;
+    padding: 10vh 1rem;
+    margin: 10vh auto 0;
   }
   
   .header {
