--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,14 +20,12 @@ body {
   padding: 0;
   margin: 0;
   line-height: 1.6;
-  /* font-family: var(--font-text); */
   font-size: 18px;
   color: var(--font-color-dark);
-
+  overflow-x: hidden;
   padding-top: 60px !important;
-}
-@media (max-width: 979px) {
-  body {
+
+  @media (max-width: 979px) {
     padding-top: 0px; /* necessary? */
   }
 }
