--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,6 +1,6 @@
 /* COMPONENT-LEVEL STYLES */
 .container {
-    max-width: 100vw;
+    width: 100vw;
     padding: 10vh 1rem;
     margin: 10vh auto 0;
   }
