--- a/components/navbar.module.scss
+++ b/components/navbar.module.scss
@@ -15,6 +15,7 @@
   font-size: large;
   filter: blur(2px);
   backdrop-filter: blur(1px);
+  width: 100vw;
 }
 
 .navBar:hover {
@@ -52,8 +53,9 @@
 
 
 .burgerMenu {
-  width: 100%;
+  width: 10%;
   border: none;
+  opacity: 0.7;
 }
 
 // Check this out
@@ -68,10 +70,23 @@
   border: none;
 }
 
-.navbarTogglerIcon.close {
-  transform: rotate(180deg);
-}
+// .navbarTogglerIcon.close {
+//   transform: rotate(180deg);
+// }
 
 .navbarTogglerIcon::selection {
   border: none;
+}
+
+.skip-link {
+  display: inline-block;
+  padding: 0.7rem 1rem 0.5rem 1rem;
+  background: var(--color-light);
+  color: var(--color-primary-shade);
+  text-decoration: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
 }
