--- a/styles/global.scss
+++ b/styles/global.scss
@@ -17,21 +17,29 @@ html,
 
 body {
   background-color: var(--bg-color-light);
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   line-height: 1.6;
   font-size: 18px;
   color: var(--font-color-dark);
-  overflow-x: hidden;
   padding-top: 60px !important;
-
+  width: 100vw;
   @media (max-width: 979px) {
     padding-top: 0px; /* necessary? */
   }
 }
 
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -49,12 +57,17 @@ img {
   display: block;
 }
 
-ul {
+ul, li {
   list-style-type: none;
 }
 
-p {
+h1,
+h2,
+h3,
+h4,
+h5, p {
   font-family: 'Italiana', sans-serif;
+  color: var(--font-color-dark);
 }
 
 body::selection {
@@ -65,3 +78,4 @@ body::selection {
 button {
   border: none;
 }
+
