--- a/components/navbar.module.scss
+++ b/components/navbar.module.scss
@@ -3,6 +3,7 @@
   background-color: secondary;
   color: primary;
   font-family: 'italiana', 'Gill Sans', 'TeX Gyre Adventor', sans-serif;
+  //border-bottom: 0.5px solid var(--font-color-dark);
 }
 
 .PLogo {
