--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,8 +6,6 @@ html,
   --font-color-dark: #383636;
   --font-color-light: ;
   --color-white: #ffffff;
-  --font-titles: 'Italiana', serif;
-  --font-text: 'Forum', cursive;
 }
 
 /* font 
@@ -16,7 +14,7 @@ html,
      */
 
 body {
-  background-color: var(--bg-color-light);
+  background-color: var(--bg-color-light) !important;
   overflow-x: hidden;
   padding: 0;
   margin: 0;
@@ -43,7 +41,7 @@ body {
 }
 
 a {
-  color: var(--font-color-dark);
+  color: var(--font-color-dark) !important; 
   text-decoration: none;
 }
 
@@ -68,11 +66,6 @@ h4,
 h5, p {
   font-family: 'Italiana', sans-serif;
   color: var(--font-color-dark);
-}
-
-body::selection {
-  background-color: primary;
-  color: secondary;
 }
 
 button {
