--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -220,18 +220,21 @@ $breakpoint-MacBook13: 1920px;
 
 /* HOME PAGE */
 .bigMoon {
-  filter: drop-shadow(0 0 20px rgba(252, 255, 200, 0.9));
-  background: radial-gradient(white, rgba(255, 249, 235, 0.9));
+  filter: drop-shadow(0 0 5rem rgba(252, 255, 200, 0.9));
+  background: radial-gradient(white, rgba(255, 255, 255, 0) 5%);
   position: absolute;
-  top: 0;
-  bottom: 0;
+  top: 20vh;
+  bottom: 20vh;
   left: 0;
   right: 0;
+  //position: fixed;
+  //top: 5vh;
+  //left: 2vw;
 }
 
 .bigMoon:hover {
   filter: drop-shadow(0 0 5rem white);
-  background: radial-gradient(white, rgba(255, 255, 255, 0) 75%);
+  background: radial-gradient(white, rgba(255, 255, 255, 0) 55%);
   opacity: 0.7;
 }
 
