--- a/styles/global.scss
+++ b/styles/global.scss
@@ -41,7 +41,7 @@ body {
 }
 
 a {
-  color: var(--font-color-dark) !important; 
+  color: var(--font-color-dark) !important;
   text-decoration: none;
 }
 
@@ -55,7 +55,8 @@ img {
   display: block;
 }
 
-ul, li {
+ul,
+li {
   list-style-type: none;
 }
 
@@ -63,7 +64,9 @@ h1,
 h2,
 h3,
 h4,
-h5, p {
+h5,
+h6,
+p {
   font-family: 'Italiana', sans-serif;
   color: var(--font-color-dark);
 }
@@ -71,4 +74,3 @@ h5, p {
 button {
   border: none;
 }
-
