--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -1,34 +1,33 @@
 //variables
-$breakpoint-iPadMini: 768px;
 $breakpoint-iPhone12: 390px;
-$breakpoint-iPadV: 820px;
-$breakpoint-iPadH: 1180px;
+$breakpoint-iPadMini: 768px;
 $breakpoint-NestHubMax: 1280px;
 $breakpoint-MacBook13: 1920px;
 
 .allPages {
   margin-top: 6rem;
   margin-right: 0px;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 .page {
-  margin-top: 60px;
-  margin-bottom: 10%;
-  max-height: 100vh;
-  
+  padding-top: 2rem;
+  margin-top: 2rem;
+  min-height: 100vh;
 }
 
 /* Not working? */
 
+// Font sizes calculated via https://type-scale.com/  using the golden ratio
+
 /* RELATED TO h1 */
 .heading3Xl {
   @media (max-width: $breakpoint-iPadMini) {
-    font-size: 8rem;
-    line-height: 3rem;
+    font-size: 6rem;
+    line-height: 1rem;
     letter-spacing: -0.05rem;
   }
-  font-size: 10rem;
+  font-size: 11.089rem;
   line-height: 5rem;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
@@ -37,7 +36,7 @@ $breakpoint-MacBook13: 1920px;
 
 /* RELATED TO h2 */
 .heading2Xl {
-  font-size: 5rem;
+  font-size: 6.854rem;
   line-height: 5rem;
   font-weight: 800;
   letter-spacing: -0.05rem;
@@ -47,8 +46,8 @@ $breakpoint-MacBook13: 1920px;
 
 /* RELATED TO h3 */
 .headingXl {
-  font-size: 2rem;
-  line-height: 1.5;
+  font-size: 4.236rem;
+  line-height: 1.4;
   font-weight: 800;
   letter-spacing: -0.05rem;
   margin: 1rem 0;
@@ -56,25 +55,31 @@ $breakpoint-MacBook13: 1920px;
 
 /* RELATED TO h4 */
 .headingLg {
-  font-size: 1.5rem;
+  font-size: 2.618rem;
   line-height: 1.4;
   margin: 1rem 0;
 }
 
-.headingLg a:hover {
+/* RELATED TO h5 */
+.headingMd {
+  font-size: 1.618rem;
+  line-height: 1.5;
+}
+
+.headingMd a:hover {
   color: var(--font-color-dark);
   -webkit-text-stroke: 1.5px var(--font-color-dark);
 }
 
-/* RELATED TO h5 */
-.headingMd {
-  font-size: 1.2rem;
-  line-height: 1.5;
+/* RELATED TO h6 */
+.headingSm {
+  font-size: 1rem;
+  line-height: 1.2;
 }
 
 .textDescriptions {
-  font-family: 'Forum', serif;
-  font-size: 1.2rem;
+  font-family: 'Abhaya Libre', serif;
+  font-size: 1.618rem;
   line-height: 1.5;
 }
 
@@ -96,28 +101,17 @@ $breakpoint-MacBook13: 1920px;
 /* LANDING PAGE */
 //START PAGE
 
-//do this
-.uxWord {
-  @media (min-width: $breakpoint-iPhone12) {
-    left: 2%;
-  }
-  @media (min-width: $breakpoint-iPadMini) {
-    left: 45%;
-  }
-  @media (min-width: $breakpoint-MacBook13) {
-    left: 48%;
-  }
-}
-
 .underlineVD {
+  @media (max-width: $breakpoint-iPadMini) {
+    width: 20rem;
+    right: 6rem;
+  }
   color: primary;
   top: -8rem;
   position: relative;
-  left: 8rem;
-  width: 120%;
+  right: -27rem;
+  width: 38rem;
   opacity: 100%;
-  @media (min-width: $breakpoint-iPhone12) {
-  }
 }
 
 .lineVertical,
@@ -216,20 +210,22 @@ $breakpoint-MacBook13: 1920px;
   color: primary;
 }
 
+.uxBox {
+  margin-right: 6rem;
+  padding-right: 6rem;
+}
+
 /* Redo arrows with media queries */
 
 /* HOME PAGE */
 .bigMoon {
   filter: drop-shadow(0 0 5rem rgba(252, 255, 200, 0.9));
   background: radial-gradient(white, rgba(255, 255, 255, 0) 5%);
-  position: absolute;
-  top: 20vh;
-  bottom: 20vh;
-  left: 0;
-  right: 0;
-  //position: fixed;
-  //top: 5vh;
-  //left: 2vw;
+  position: static;
+  // top: 20vh;
+  // bottom: 20vh;
+  // left: 0;
+  // right: 0;
 }
 
 .bigMoon:hover {
@@ -240,9 +236,9 @@ $breakpoint-MacBook13: 1920px;
 
 /*ABOUT PAGE*/
 
-.profilePicBox{
-  // max-height: inherit;
-}
+// .profilePicBox{
+//   // max-height: inherit;
+// }
 
 // .profilePic{
 // max-width: 20%;
@@ -286,6 +282,10 @@ a.backChevron {
 a.backChevron:hover + .goBackText {
   text-decoration: dashed;
   color: var(--font-color-light);
+}
+
+.mail{
+ 
 }
 
 // No va
