--- a/styles/global.scss
+++ b/styles/global.scss
@@ -6,6 +6,14 @@ html,
   --font-color-dark: #383636;
   --font-color-light: ;
   --color-white: #ffffff;
+  --step--2: clamp(0.33rem, calc(0.32rem + 0.07vw), 0.43rem);
+  --step--1: clamp(0.54rem, calc(0.52rem + 0.11vw), 0.70rem);
+  --step-0: clamp(0.88rem, calc(0.84rem + 0.18vw), 1.13rem);
+  --step-1: clamp(1.42rem, calc(1.36rem + 0.29vw), 1.82rem);
+  --step-2: clamp(2.29rem, calc(2.20rem + 0.47vw), 2.95rem);
+  --step-3: clamp(3.71rem, calc(3.56rem + 0.76vw), 4.76rem);
+  --step-4: clamp(6.00rem, calc(5.75rem + 1.22vw), 7.71rem);
+  --step-5: clamp(9.70rem, calc(9.31rem + 1.98vw), 12.48rem);
 }
 
 /* font 
@@ -30,10 +38,11 @@ body {
 
 html,
 body {
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
 }
 
+//What's this
 * {
   box-sizing: border-box;
   margin: 0;
