--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -2,23 +2,23 @@
 $breakpoint-bootstrapmd: 768px;
 $breakpoint-bootstraplg: 992px;
 
-
 /* COMPONENT-LEVEL STYLES */
 .container {
-    width: 100vw;
-    padding: 5vh 1rem;
-    margin: 5vh auto 5vh;
-    @media (min-width: $breakpoint-bootstrapmd) {
-      margin: 5vh auto 0;
-    }
+  width: 100vw;
+  padding: 5vh 1rem;
+  margin: 10vh auto 0;
+  height: fit-content;
+  @media (min-width: $breakpoint-bootstrapmd) {
+    margin: 5vh auto 0;
   }
-  
-  .header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .backToHome {
-    margin: 3rem 0 0;
-  }
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.backToHome {
+  margin: 3rem 0 0;
+}
