--- a/styles/global.scss
+++ b/styles/global.scss
@@ -75,9 +75,14 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6
+{
   font-family: 'Italiana', sans-serif;
+  color: var(--font-color-dark);
+}
+
+p{
+  font-family: 'Abhaya Libre', serif;
   color: var(--font-color-dark);
 }
 
