scrolling to next page

--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -177,6 +177,7 @@ $breakpoint-bootstraplg: 992px;
     left: 49vw;
     margin-top: -24vh;
   }
+  scroll-behavior: smooth;
 }
 
 .findOutBox2 {
@@ -187,6 +188,8 @@ $breakpoint-bootstraplg: 992px;
     left: 53%;
     margin-top: 1rem;
   }
+  scroll-behavior: smooth;
+
 }
 
 .secondArrowDown {
