--- a/components/navbar.module.scss
+++ b/components/navbar.module.scss
@@ -1,9 +1,9 @@
 .header {
   z-index: 9999999;
-  background-color: secondary;
-  color: primary;
+  background-color: var(--bg-color);
+  color: var(--font-color-dark);
   font-family: 'italiana', 'Gill Sans', 'TeX Gyre Adventor', sans-serif;
-  //border-bottom: 0.5px solid var(--font-color-dark);
+  //border-bottom: 0.5px solid var(--font-color);
 }
 
 .PLogo {
@@ -33,18 +33,20 @@
   font-style: none;
   transition: all ease-in-out 200ms;
   text-decoration: none;
-  color: var(--font-color-dark);
+  color: var(--font-color);
 }
 
 .underDot {
   visibility: hidden;
   justify-self: center;
+  color: var(--font-color);
 }
 
 .P {
   position: relative;
   left: 2rem;
   top: -1rem;
+  color: (--font-color);
 }
 
 .navBar a:hover + .dotBox .underDot {
@@ -53,8 +55,8 @@
 
 /*add dot animation + when selected??*/
 .navBar a:hover {
-  -webkit-text-stroke: 1.5px var(--font-color-dark);
-  color: var(--font-color-light);
+  -webkit-text-stroke: 1.5px var(--font-color);
+  color: var(--font-color);
   text-shadow: -1px -2px 10px white, 1px 1px 1px black;
 }
 
@@ -66,7 +68,7 @@
 
 // Check this out
 .burgerMenu:active {
-  background-color: var(--bg-color-light);
+  background-color: var(--bg-color);
   opacity: 0.8;
   backdrop-filter: blur(1px);
   filter: none;
