--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,21 +1,24 @@
 html,
 /* GENERAL */
 :root {
-  --bg-color-light: #f8eded;
-  --bg-color-dark: ;
-  --font-color-dark: #383636;
-  --font-color-light: ;
+  --bg-color: #f8eded;
+  --font-color: #383636;
   --color-white: #ffffff;
+  --bs-border-color: var(--font-color)!important;
   --step--2: clamp(0.33rem, calc(0.32rem + 0.07vw), 0.43rem);
-  --step--1: clamp(0.54rem, calc(0.52rem + 0.11vw), 0.70rem);
+  --step--1: clamp(0.54rem, calc(0.52rem + 0.11vw), 0.7rem);
   --step-0: clamp(0.88rem, calc(0.84rem + 0.18vw), 1.13rem);
   --step-1: clamp(1.42rem, calc(1.36rem + 0.29vw), 1.82rem);
-  --step-2: clamp(2.29rem, calc(2.20rem + 0.47vw), 2.95rem);
+  --step-2: clamp(2.29rem, calc(2.2rem + 0.47vw), 2.95rem);
   --step-3: clamp(3.71rem, calc(3.56rem + 0.76vw), 4.76rem);
-  --step-4: clamp(6.00rem, calc(5.75rem + 1.22vw), 7.71rem);
-  --step-5: clamp(9.70rem, calc(9.31rem + 1.98vw), 12.48rem);
+  --step-4: clamp(6rem, calc(5.75rem + 1.22vw), 7.71rem);
+  --step-5: clamp(9.7rem, calc(9.31rem + 1.98vw), 12.48rem);
 }
 
+[data-theme='dark'] {
+  --bg-color: #5b6876;
+  --font-color: #f8eded;
+}
 
 /* font 
     -webkit-font-smoothing: antialiased;
@@ -23,24 +26,18 @@ html,
      */
 
 body {
-  background-color: var(--bg-color-light) !important;
+  background-color: var(--bg-color) !important;
   overflow-x: hidden;
   padding: 0;
   margin: 0;
   line-height: 1.6;
   font-size: 18px;
-  color: var(--font-color-dark);
+  color: var(--font-color);
   padding-top: 60px !important;
   width: 100vw;
   @media (max-width: 979px) {
     padding-top: 0px; /* necessary? */
   }
-}
-
-html,
-body {
-  // width: 100%;
-  // height: 100%;
 }
 
 //What's this
@@ -51,13 +48,13 @@ body {
 }
 
 a {
-  color: var(--font-color-dark) !important;
+  color: var(--font-color) !important;
   text-decoration: none !important;
 }
 
 a:hover {
-  color: var(--font-color-light);
-  border-color: var(--font-color-dark);
+  color: var(--font-color);
+  border-color: var(--font-color);
 }
 
 img {
@@ -75,17 +72,21 @@ h2,
 h3,
 h4,
 h5,
-h6
-{
+h6 {
   font-family: 'Italiana', sans-serif;
-  color: var(--font-color-dark);
+  color: var(--font-color);
 }
 
-p{
+p {
   font-family: 'Abhaya Libre', serif;
-  color: var(--font-color-dark);
+  color: var(--font-color);
 }
 
 button {
   border: none;
 }
+
+li {
+  color: var(--font-color);
+}
+
