working on the designs page

--- a/styles/utils.module.scss
+++ b/styles/utils.module.scss
@@ -387,3 +387,14 @@ $amount: 20;
   transition: all 1.5s;
 }
 
+/* Designs */
+.SwitchesSample {
+  max-width: 70%;
+  min-width: 70%;
+  align-self: center;
+}
+
+.reducedPic {
+  max-width: 40vw;
+  justify-content: center;
+}
